adding attribution styles

--- a/index.html
+++ b/index.html
@@ -194,13 +194,13 @@
                 </div>
             </div>
         </footer>
-        <!-- <p class="attribution">
+        <p class="attribution">
             Challenge by
             <a
                 href="https://www.frontendmentor.io?ref=challenge"
                 target="_blank"
                 >Frontend Mentor</a
             >. Coded by <a href="#">Keside Ezeala</a>.
-        </p> -->
+        </p>
     </body>
 </html>
